remove extra margin causing rendering issue

--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -3,10 +3,6 @@
 #summaryPane {
   transition: margin $sidebar-toggle-duration ease;
 
-  h2 + p {
-    margin-bottom: 2rem;
-  }
-
   h3 {
     margin-top: 2.25rem;
   }
